@@ -42,7 +42,7 @@ module Netzke
   
       # Api (besides the default "load_aggregatee_with_cache" - JavaScript side already knows about it)
       api_points = self.class.api_points.reject{ |p| p == :load_aggregatee_with_cache }
-      res.merge!(:api => api_points) unless api_points.empty?
+      res.merge!(:netzke_api => api_points) unless api_points.empty?
   
       # Widget class name. Needed for dynamic instantiation in javascript.
       res.merge!(:widget_class_name => short_widget_class_name)
