@@ -2,7 +2,8 @@
 * API change: Netzke::Base: <tt>id_name</tt> accessor renamed to <tt>global_id</tt>
 * Several internal code changes
 * Slightly better test coverage
-* New: <tt>Base#global_id_by_reference</tt> method
+* New: <tt>Netzke::Base#global_id_by_reference</tt> method
+* Compatibility: resolving conflicts with the <tt>api</tt> property in some Ext v3.0 components
 
 = v0.4.4 - 2009-10-12
 * API change: default handlers for actions and tools are now supposed to be prefixed with "on". E.g.: if you declare an action named <tt>clear_table</tt>, the handler must be called (in Ruby) <tt>on_clear_table</tt> (mapped to <tt>onClearTable</tt> in JavaScript).
